[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/BG.png" type="Texture" id=1]
[ext_resource path="res://font/Font_Huge.tres" type="DynamicFont" id=2]
[ext_resource path="res://font/Font_Big.tres" type="DynamicFont" id=3]
[ext_resource path="res://code/Home.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Home" type="Node2D"]
position = Vector2( 16, 64 )
script = ExtResource( 4 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 317.518, 458.153 )
texture = ExtResource( 1 )

[node name="Help" type="Label" parent="."]
margin_left = 183.138
margin_top = 578.531
margin_right = 223.138
margin_bottom = 592.531
custom_fonts/font = ExtResource( 3 )
text = "HELP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="TouchScreenButton" parent="Help"]
position = Vector2( -10.7222, -14.1677 )
scale = Vector2( 7.15624, 4.46015 )
shape = SubResource( 1 )

[node name="Exit" type="Label" parent="."]
margin_left = 185.966
margin_top = 702.982
margin_right = 322.966
margin_bottom = 777.982
custom_fonts/font = ExtResource( 3 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TouchScreenButton" parent="Exit"]
position = Vector2( -22.6786, -18.6158 )
scale = Vector2( 8.5156, 5.50891 )
shape = SubResource( 1 )

[node name="Play" type="Label" parent="."]
margin_left = 178.934
margin_top = 446.601
margin_right = 308.934
margin_bottom = 521.601
custom_fonts/font = ExtResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TouchScreenButton" parent="Play"]
position = Vector2( -23.9384, -15.1191 )
scale = Vector2( 8.16617, 5.01667 )
shape = SubResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = -6.10352e-05
margin_top = 124.866
margin_right = 575.0
margin_bottom = 229.866
custom_fonts/font = ExtResource( 2 )
text = "MEMORY GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore_begin" type="Label" parent="."]
margin_left = 21.0
margin_top = 328.0
margin_right = 503.0
margin_bottom = 403.0
custom_fonts/font = ExtResource( 3 )
text = "HIGHSCORE:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Help/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Exit/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Play/Play" to="." method="_on_Play_pressed"]
